# tailwindcss-to-rust

./: .gitattributes  .gitignore  Cargo.toml  Changes.md  README.md  precious.toml
.github/workflows/: ci.yml  lint.yml
generator/: Cargo.toml  Changes.md  README.md
generator/src/: main.rs
integration/: Cargo.toml
integration/tests/: lib.rs
macros/: Cargo.toml  Changes.md  README.md
macros/examples/: main.rs
macros/examples/css/: generated.rs  mod.rs  tailwind.rs
macros/src/: lib.rs  to_option_vec_string.rs
src/: main.rs
test-project/: Cargo.toml  regen.sh  tailwind.config.js
test-project/assets/: tailwind_compiled.css
test-project/src/: main.rs
