[package]
name = "tailwindcss-to-rust"
version = "0.1.3"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Generate Rust code from your compiled tailwind CSS"
repository = "https://github.com/houseabsolute/tailwindcss-to-rust"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
heck = "0.4.0"
itertools = "0.10.3"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
tempfile = "3.3.0"
tinytemplate = "1.2.1"

[features]
