[package]
name = "tailwindcss-to-rust"
version = "0.3.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Generate Rust code from your compiled tailwind CSS"
repository = "https://github.com/houseabsolute/tailwindcss-to-rust"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
itertools = "0.10.5"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
tempfile = "3.3.0"
tinytemplate = "1.2.1"

[features]
